--- a/app/css/backfire.css
+++ b/app/css/backfire.css
@@ -87,6 +87,7 @@
 
 .filelabel{
 	margin: 5px 0px 0px 10px;
+	color: white;
 }
 
 .nodesizer{
@@ -96,12 +97,12 @@
 .file {
 	margin: 8px 0px 0px 10px;
 	font-size: 12px;
-	border-top: 0.2em solid #cbcbcb;
+	border-top: 0.2em solid #72ca2a;
 	position: relative;
 	width: 1em;
 	height: 2em;
-	border-right: 0.2em solid #cbcbcb;
-	border-bottom: 0.2em solid #cbcbcb;
+	border-right: 0.2em solid #72ca2a;
+	border-bottom: 0.2em solid #72ca2a;
 }
 .file::before {
 	bottom: -0.2em;
@@ -109,15 +110,15 @@
 	position: absolute;
 	width: 0.5em;
 	height: 1.72em;
-	border-left: 0.2em solid #cbcbcb;
-	border-bottom: 0.2em solid #cbcbcb;
+	border-left: 0.2em solid #72ca2a;
+	border-bottom: 0.2em solid #72ca2a;
 	content: "";
 }
 .file::after {
 	top: -0.2em;
 	left: -0.50em;
 	position: absolute;
-	border-right: 0.5em solid #cbcbcb;
+	border-right: 0.5em solid #72ca2a;
 	border-top: 0.5em solid transparent;
 	content: "";
 }
@@ -127,7 +128,7 @@
 	font-size: 12px;
 	width: 2em;
 	height: 1.5em;
-	background: #cbcbcb;
+	background: #72ca2a;
 	border-radius: 0.2em;
 	position: relative;
 }
@@ -139,12 +140,12 @@
 	width:0.8em;
 	height:0.7em;
 	border-radius: 0.2em;
-	background: #cbcbcb;
+	background: #72ca2a;
 }
 
 .arrowleft {
 	margin: 10px 0px 0px 20px;
-	background: #cbcbcb;
+	background: #72ca2a;
 	font-size: 8px;
 	position: relative;
 	width: 1em;
@@ -155,7 +156,7 @@
 	bottom: -0.66666666em;
 	right: 0.8em;
 	position: absolute;
-	border-right: 1.2em solid #cbcbcb;
+	border-right: 1.2em solid #72ca2a;
 	border-top: 1.2em solid rgba(44, 44, 44, 0);
 	border-bottom: 1.2em solid rgba(44, 44, 44, 0);
 	content: "";
