--- a/app/css/editor_exe_view.css
+++ b/app/css/editor_exe_view.css
@@ -1,7 +1,13 @@
 
 .exe_area {
+	position:absolute;
+	top:290px;
+	left:375px;
+	right:10px;
+	bottom:10px;
+	
+	/*
 	position:relative;
-	overflow:hidden;
 	left: 10%;
 	float: left;
 	margin-top:30px;
@@ -9,11 +15,28 @@
 	min-width:800px;
 	height:auto;
 	min-height:800px;
+	*/
+	overflow:hidden;
 	border:solid;
 	border-radius:5px;
 	border-width:5px;
 	border-color:#000;
 	background-color:#444;
+	-webkit-touch-callout: text;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+}
+
+.project_title_log {
+	position:relative;
+	margin-top:30px;
+	text-align:center;
+	font-size:30px;
+	font-family:sans-serif;
+	color:white;
 }
 
 .exe_log_area {
