--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -19,14 +19,16 @@ body {
 	position:relative;
 	margin-top:30px;
 	text-align:center;
-	font-size:30px;
+	font-size:24px;
 	font-family:sans-serif;
 }
 
 .execute_button_area {
 	position:absolute;
-	top:200px;
-	right:600px;
+	top:160px;
+	height:10px;
+	padding-left:400px;
+	padding-right:auto;
 	z-index:20;
 	margin:0px;
 }
