--- a/app/css/editor_edit_view.css
+++ b/app/css/editor_edit_view.css
@@ -6,8 +6,8 @@
 	border-width:3px;
 	border-color:#72ca2a;
 	
-	top:290px;
-	left:375px;
+	top:175px;
+	left:315px;
 	right:10px;
 	bottom:10px;
 }
@@ -24,9 +24,9 @@
 	border-color:#72ca2a;
 	background-color:#4d4d4d;
 	
-	top:290px;
+	top:175px;
 	left:10px;
-	width:350px;
+	width:290px;
 	bottom:10px;
 }
 
@@ -50,16 +50,16 @@
 	bottom:10px;
 	*/
 	background-color:#4d4d4d;
-	top:50px;
-	width:350px;
-	bottom: 70px;
+	top:40px;
+	width:290px;
+	bottom: 50px;
 }
 
 #separator {
 	background-color:transparent;
 	position:absolute;
-	top:290px;
-	left:368px;
+	top:175px;
+	left:308px;
 	width:4px;
 	bottom:10px;
 	cursor: w-resize;
@@ -67,8 +67,8 @@
 
 #imageArea {
 	position:absolute;
-	top:290px;
-	left:375px;
+	top:175px;
+	left:315px;
 	right:10px;
 	bottom:10px;
 	z-index:15;
@@ -86,8 +86,8 @@
 }
 #launchButtonArea {
 	position:absolute;
-	top:290px;
-	left:375px;
+	top:175px;
+	left:315px;
 	right:10px;
 	bottom:10px;
 	z-index:15;
@@ -134,7 +134,7 @@
 	position:absolute;
 	left:20px;
 	bottom:80px;
-	width:320px;
+	width:290px;
 	height:80px;
 	z-index:20;
 	padding: 6px 6px 6px 6px;
@@ -156,10 +156,6 @@
 	color:#000;
 }
 
-#stderr {
-	background-color:#bcbcbc;
-	width:300px
-}
 #showoutputarea{
 	position:absolute;
 	top:170px;
@@ -186,6 +182,23 @@
 	user-select: text;
 }
 
+.newdirectory_new {
+	padding-left:5px;
+}
+
+.newdirectory_dir {
+	padding-left:11px;
+}
+
+.newfilearea_label {
+	padding-left:15px;
+}
+
+/*
+#stderr {
+	background-color:#bcbcbc;
+	width:300px
+}
 #stdout{
 	background-color:rgba(219, 219, 219, 0.8);
 	position:absolute;
@@ -194,7 +207,7 @@
 	right:0px;
 	bottom:0px;
 	margin:0px;
-/*	height:500px;*/
 	overflow:scroll;
 }
+*/
 
