--- a/app/css/button.css
+++ b/app/css/button.css
@@ -341,13 +341,12 @@
 	font-weight:600;
 	background-repeat:no-repeat;
 	background-size: contain;
-	margin-left:auto;
-	margin-right:auto;
 }
 
 .button_execute:active{
 	background-image:url("../image/button_bg_action_play_press.png");
 	background-repeat:no-repeat;
+	background-size: contain;
 }
 
 /* button - edit */
