--- a/app/css/base.css
+++ b/app/css/base.css
@@ -295,7 +295,7 @@ input{
 	z-index:50;
 }
 
-#confirm_dialog {
+.confirm_dialog {
 	top: 50%;
 	left: 50%;
 	width: 400px;
@@ -308,20 +308,7 @@ input{
 	z-index:60;
 }
 
-#exist_warning_dialog {
-	top: 50%;
-	left: 50%;
-	width: 400px;
-	height: 200px;
-	margin-top:-100px;
-	margin-left:-200px;
-	position: fixed;
-	visibility: hidden;
-	background-color:#444444;
-	z-index:60;
-}
-
-#confirm_message {
+.confirm_message {
 	transform: translateY(50%);
 	font-family:sans-serif;
 	text-align:center;
