--- a/app/css/backfire.css
+++ b/app/css/backfire.css
@@ -3,8 +3,6 @@
 	position:relative;
 	display: flex;
 	/*display: -webkit-flex;*/
-	margin-top:-25px;
-	margin-bottom:5px;
 	/*flex-direction: row;*/
 }
 
@@ -48,7 +46,9 @@
 }
 
 #playinfo {
-	margin: 10px;
+	margin-right: 10px;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 #errormsg {
