--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -25,7 +25,7 @@ body {
 
 .execute_button_area {
 	position:absolute;
-	top:160px;
+	top:90px;
 	padding-right:auto;
 	z-index:20;
 	margin:0px;
@@ -40,15 +40,22 @@ td {
 	vertical-align: top;
 }
 
-.change_mode_area {
+.change_mode_area_container {
 	position: absolute;
-	padding-right:auto;
+	left:0px;
+	min-width:800px;
+	width:800px;
+	text-align: right;
+}
+
+.change_mode_area {
+	position: relative;
+	right: 100px;
+	top:90px;
 	z-index:20;
 	width:800px;
-	height:10px;
+	height:-10px;
 	margin:0px;
-	min-width:800px;
-	text-align: right;
 }
 
 .stop_label {
