--- a/app/css/backfire.css
+++ b/app/css/backfire.css
@@ -13,6 +13,9 @@
 #dirpath {
 	width:100%;
 	z-index:30;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 #filename {
@@ -49,6 +52,9 @@
 	margin-right: 10px;
 	margin-left: 10px;
 	margin-top: 10px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 #errormsg {
