--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -27,12 +27,11 @@ body {
 	position:absolute;
 	top:90px;
 	padding-right:auto;
-	z-index:20;
 	margin:0px;
 	width:800px;
 	height:10px;
 	min-width:800px;
-  text-align: center;
+	text-align: center;
 }
 
 td {
@@ -44,16 +43,16 @@ td {
 	position: absolute;
 	left:0px;
 	min-width:800px;
-	width:800px;
+	width:100%;
 	text-align: right;
 }
 
 .change_mode_area {
 	position: relative;
-	right: 100px;
+	right: 10px;
 	top:90px;
-	z-index:20;
-	width:800px;
+	min-width:800px;
+	width:100%;
 	height:-10px;
 	margin:0px;
 }
@@ -62,4 +61,14 @@ td {
 	position: relative;
 	top:-5px;
 	left:12px;
+}
+
+.vim_mode_text {
+	position:relative;
+	left: 10px;
+}
+
+.xcode_mode_text {
+	position:relative;
+	left: 3px;
 }
