--- a/app/css/backfire.css
+++ b/app/css/backfire.css
@@ -51,7 +51,8 @@
 #playinfo {
 	margin-right: 10px;
 	margin-left: 10px;
-	margin-top: 10px;
+	margin-top: 7px;
+	margin-bottom: 3px;
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
