--- a/app/css/home.css
+++ b/app/css/home.css
@@ -1,33 +1,45 @@
 #new_project {
-	position:relative;
+	position:absolute;
 	min-height: 100px;
 	min-width: 800px;
 	width: 100%;
-	position: relative;
 	top: 0;
 	left: 0;
-	z-index:20;
-	padding: 6px 6px 6px 6px;
+	width: 100%;
+	height: 100%;
 	color: #fff;
-	background-color:#72ca2a;
 	display:none;
 	opacity: 1;
-	text-align:center;
+	text-align:left;
+	background:transparent;
 }
 
 .new_project_content {
 	position:relative;
+	top: 30px;
+	left : -100px;
+	margin: auto;
+	width: 340px;
+	height: 80px;
+	padding: 6px 6px 6px 6px;
+	background-color:#72ca2a;
+	border:solid;
+	border-radius:4px;
+	border-width:3px;
+	border-color:#72ca2a;
+	z-index: 20;
 }
 
 .input-newproject{
 	position:relative;
-	top:-30px;
-	width:200px;
+	top:10px;
+	left:0px;
+	width:260px;
 	background-color:#4d4d4d;
 	border-style:none;
 	line-height:38px;
 	border-radius:5px;
-	color:#aaa;
+	color:#fff;
 }
 
 .pane_bottom {
@@ -43,4 +55,8 @@
 	opacity: 1;
 	
 	text-align:center;
+}
+
+.newNameLabel {
+	font-weight: 600;
 }
