--- a/app/css/editor_info_view.css
+++ b/app/css/editor_info_view.css
@@ -26,7 +26,7 @@
 	left: 10%;
 	float: left;
 	margin-top:30px;
-	width:80%;
+	width:100%;
 	height:auto;
 }
 
@@ -74,9 +74,11 @@ a.info_link:hover {
 
 table {
 	border-collapse: collapse;
+	width: 100%;
+	margin:auto;
 }
 
-td.info_title {
+td.info_title  {
 	border-color : #000000;
 	border-width : 1px;
 	border-style : solid;
