--- a/app/css/editor_edit_view.css
+++ b/app/css/editor_edit_view.css
@@ -54,7 +54,7 @@
 	background-color:#4d4d4d;
 	top:40px;
 	width:290px;
-	bottom: 50px;
+	bottom: 58px;
 }
 
 #separator {
@@ -216,6 +216,26 @@
 	user-select: text;
 }
 
+.newfilearea_border_container {
+	position:absolute;
+	width:100%;
+	height:3px;
+	bottom: 53px;
+}
+
+.newfilearea_border {
+	position:relative;
+	width:95%;
+	height:3px;
+	z-index: 60;
+	margin-left: auto;
+	margin-right: auto;
+	border-top:0px;
+	border-left:0px;
+	border-right:0px;
+	border-bottom: 0.15em solid white;
+}
+
 .newdirectory_new {
 	padding-left:6px;
 }
@@ -236,6 +256,11 @@
 
 .newfilearea_delete_label {
 	padding-left:18px;
+}
+
+.filebutton_conainer {
+	position: absolute;
+	bottom: 0px;
 }
 
 .vim_mode_text {
