--- a/app/css/editor_exe_view.css
+++ b/app/css/editor_exe_view.css
@@ -32,13 +32,14 @@
 }
 
 .exe_log_area {
-	position:relative;
-	overflow:hidden;
-	left: 10%;
+	position:absolute;
+	overflow:auto;
 	float: left;
 	margin-top:30px;
-	width:80%;
-	height:auto;
+	width:100%;
+	top:60px;
+	right:0px;
+	bottom:0px;
 }
 
 .exe_log {
