--- a/app/css/editor_edit_view.css
+++ b/app/css/editor_edit_view.css
@@ -279,6 +279,14 @@
 	left: -2px;
 }
 
+.rename_done_label {
+	position:relative;
+	left: -3px;
+}
+
+.button_delete_done_label {
+}
+
 /*
 #stderr {
 	background-color:#bcbcbc;
