--- a/app/css/button.css
+++ b/app/css/button.css
@@ -452,11 +452,13 @@
 	height:25px;
 	position:relative;
 	top:0px;
+	left: 60px;
 	background-image:url("../image/button_rect.png");
 	background-repeat:no-repeat;
 	background-size: contain;
 	font-size:12px;
 	font-weight:300;
+	z-index:1;
 }
 
 .button_back:active{
