--- a/app/css/editor_info_view.css
+++ b/app/css/editor_info_view.css
@@ -42,7 +42,12 @@
 	margin-left:50px;
 	margin-bottom:20px;
 	font-size:18px;
-	font-family:sans-serif;
+}
+
+.info_text_file {
+	position:relative;
+	margin-left:50px;
+	top:50px;
 }
 
 .info_text {
@@ -51,7 +56,6 @@
 	margin-bottom:5px;
 	margin-left:20px;
 	font-size:16px;
-	font-family:sans-serif;
 }
 
 .info_table_area {
