--- a/app/css/base.css
+++ b/app/css/base.css
@@ -313,7 +313,7 @@ input{
 	top: 0;
 	left: 0;
 	visibility: hidden;
-	background-color:#CCCCCC;
+	background-color:#333333;
 	opacity: 0.7;
 	z-index:50;
 }
