--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -16,10 +16,14 @@ body {
 }
 
 .project_title {
-	position:relative;
-	margin-top:30px;
-	text-align:center;
-	font-size:24px;
+	margin-top:7px;
+	margin-bottom:1px;
+}
+
+.info_project_title {
+	margin-left:20px;
+	text-align:left;
+	font-size:16px;
 }
 
 .execute_button_area {
