--- a/app/css/editor_info_view.css
+++ b/app/css/editor_info_view.css
@@ -11,7 +11,7 @@
 	border:solid;
 	border-radius:2px;
 	border-color:#72ca2a;
-	background-color:#f4f2e9;
+	background-color:#CBCBCB;
 	-webkit-touch-callout: text;
 	-webkit-user-select: text;
 	-khtml-user-select: text;
@@ -21,19 +21,19 @@
 }
 
 .info_text_area {
-	position:relative;
-	width: 80%;
+	margin-left: 30px;
+	margin-right: 10px;
 	margin-top:30px;
 	height:auto;
+	border-collapse: separate;
+	border-spacing: 4px;
 }
 
 .info_back_button_area {
-	position:relative;
 	overflow:hidden;
 	float: left;
-	width:80%;
-	margin-top:30px;
-	height:auto;
+	width:100%;
+	height:30px;
 	display:none;
 }
 
@@ -41,7 +41,7 @@
 	position:relative;
 	margin-left:50px;
 	margin-bottom:20px;
-	font-size:18px;
+	font-size:16px;
 }
 
 .info_text_file {
@@ -55,12 +55,13 @@
 	margin-top:5px;
 	margin-bottom:5px;
 	margin-left:20px;
-	font-size:16px;
+	font-size:15px;
 }
 
-.info_table_area {
-	position: absolute;
-	width: 100%;
+.info_bar {
+	margin-left:10px;
+	margin-right:10px;
+	border-bottom: 0.15em solid white;
 }
 
 a.info_link:link {
@@ -79,24 +80,41 @@ a.info_link:hover {
 	text-decoration: none;
 }
 
-table {
-	border-collapse: collapse;
-	margin:auto;
-	table-layout: fixed;
+.row {
+	display:table;
 	width: 100%;
 }
 
-td.info_title  {
-	border-color : #000000;
-	border-width : 1px;
-	border-style : solid;
-	padding : 2px;
-	width: 300px;
+.info_title {
+	display:table-cell;
+	padding-left:5px;
+	border-left: 6px solid #808080;
+	border-bottom: 1px solid #808080;
+	width: 150px;
+	min-width: 150px;
 }
-td.info_text {
-	border-color : #000000;
-	border-width : 1px;
-	border-style : solid;
-	padding : 2px;
-	width: 2048px;
+
+.info_text {
+	display:table-cell;
+	padding-left:5px;
+	border-left: 6px solid #FFF;
+	border-bottom: 1px solid #FFF;
+	width: 100%;
+}
+
+.json_title {
+	display:table-cell;
+	padding-left:5px;
+	border-left: 6px solid #808080;
+	border-bottom: 1px solid #808080;
+	width: 40%;
+	min-width: 150px;
+}
+
+.json_text {
+	display:table-cell;
+	padding-left:5px;
+	border-left: 6px solid #FFF;
+	border-bottom: 1px solid #FFF;
+	width: 60%;
 }
